--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +11,15 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "apollo-link-error": "^1.1.13",
+    "aws-amplify": "^5.0.3",
+    "aws-appsync": "^4.1.9",
+    "aws-appsync-auth-link": "^2.0.8",
+    "aws-appsync-subscription-link": "^3.1.2",
+    "graphql": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
