--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w"
   },
   "browserslist": {
     "production": [
@@ -46,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.12",
+    "@graphql-codegen/client-preset": "^1.1.5",
     "@types/styled-components": "^5.1.26",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^2.0.0"
