--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "aws-appsync": "^4.1.9",
     "aws-appsync-auth-link": "^2.0.8",
     "aws-appsync-subscription-link": "^3.1.2",
-    "graphql": "^15.0.0",
+    "graphql": "15.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -46,6 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "graphql": "15.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.12",
